# near-hex-board-game

./: README.md
bos/components/: Hex.jsx  HexField.jsx  HexGame.jsx  HexGameMain.jsx
contract/: Cargo.toml
contract/src/: game.rs  lib.rs
